# Shared

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: configure_ubuntu.sh  configure_windows.ps1  continuous_integration.yml
cmake/: x64-linux-gcc.cmake  x64-linux-gcc.toolchain.cmake  x64-linux-llvm.cmake  x64-linux-llvm.toolchain.cmake  x64-osx-llvm.cmake  x64-osx-llvm.toolchain.cmake  x64-windows-llvm-release.cmake  x64-windows-llvm-static.cmake  x64-windows-llvm.cmake  x64-windows-llvm.toolchain-no-lto.cmake  x64-windows-llvm.toolchain.cl.cmake  x64-windows-llvm.toolchain.cmake  x64-windows.cmake
lib/: CMakeLists.txt
lib/CRC/: CRCHelper.hpp  CRCTypes.h
lib/Container/: StaticQueue.hpp  TwoDVector.hpp
lib/Enum/: Enum.hpp
lib/LUT/: CompileTimeLookup.hpp  ConstexprFind.hpp
lib/Math/: Calculus.hpp  Statistics.hpp
lib/Serialize/: BinaryWriter.hpp  BitSetTemplate.hpp  FixedPoint.hpp  PrintHexArray.hpp  SerializeDeserializeNum.hpp
lib/Version/: FourDigitVersion.hpp  TwoDigitVersion.hpp
test/: CMakeLists.txt
test/CRC/: CRC_Tests.cpp
test/Container/: StaticQueue_Tests.cpp
test/Enum/: EnumAdvanced_Tests.cpp  EnumBasic_Tests.cpp
test/LUT/: LUT_Tests.cpp
test/LookupTable/: LookupTable_Tests.cpp
test/Math/: Calculus_Tests.cpp  Statistics_Tests.cpp
test/Serialize/: BinaryWriter_Tests.cpp  FixedPoint_Tests.cpp  SerializeDeserialize_Tests.cpp
